--- a/nexus.html
+++ b/nexus.html
@@ -11,11 +11,11 @@
 	<div>
 		<header class="header">
 			<img src="HEXUS.png">
-			<a href="">Games</a>
-			<a href="">Mods</a>
-			<a href="">Media</a>
-			<a href="">Community</a>
-			<a href="">Support</a>
+			<a href="https://www.netflix.com/kz/">Games</a>
+			<a href="https://www.netflix.com/kz/">Mods</a>
+			<a href="https://www.netflix.com/kz/">Media</a>
+			<a href="https://www.netflix.com/kz/">Community</a>
+			<a href="https://www.netflix.com/kz/">Support</a>
 			<input type="text" placeholder="Search" align="right">
 
 		</header>
@@ -31,152 +31,52 @@
 				</div>
 				<a href="">Browse Game's Files</a>
 			</h1>
-
 			<h2>
-				text h2
+				<table class="secondary_field_1line">
+				<tr>
+					<th class="item_card">
+						<img src="im1.png" width="80%">
+						<p>Monster </p>
+					</th>
+					<th class="item_card">
+						<img src="im2.png" width="80%">
+						<p>Monster </p>
+					</th>
+					<th class="item_card">
+						<img src="im3.png" width="80%">
+						<p>Monster </p>
+					</th>
+					<th class="item_card">
+						<img src="im4.png" width="80%">
+						<p>Monster </p>
+					</th>
+		</table>
 			</h2>
-
-		</div>
-		<div class="secondary_field">
-			<h3>
-				text h3
-			</h3>
-
-			<h4>
-				text h4
-			</h4>
 		</div>
 
 
 
-
-
-
-
-
-		<div align="center" font-size: 50px>
-			<p font-size: 100px style="color: white; font-family: cursive;"> Welcome to the Dungeon, fcking slave</p>
-		</div>
-
-		<div class="secondary_field" style="	padding-top: 40px;
-	padding-bottom: 20px;
-	padding-left : 15px;
-	padding-right : 15px;">
-			Once upon a midnight dreary, while I pondered, weak and weary,
-Over many a quaint and curious volume of forgotten lore—
-    While I nodded, nearly napping, suddenly there came a tapping,
-As of some one gently rapping, rapping at my chamber door.
-“’Tis some visitor,” I muttered, “tapping at my chamber door—
-            Only this and nothing more.”
-
-    Ah, distinctly I remember it was in the bleak December;
-And each separate dying ember wrought its ghost upon the floor.
-    Eagerly I wished the morrow;—vainly I had sought to borrow
-    From my books surcease of sorrow—sorrow for the lost Lenore—
-For the rare and radiant maiden whom the angels name Lenore—
-            Nameless here for evermore.
-
-    And the silken, sad, uncertain rustling of each purple curtain
-Thrilled me—filled me with fantastic terrors never felt before;
-    So that now, to still the beating of my heart, I stood repeating
-    “’Tis some visitor entreating entrance at my chamber door—
-Some late visitor entreating entrance at my chamber door;—
-            This it is and nothing more.”
-
-    Presently my soul grew stronger; hesitating then no longer,
-“Sir,” said I, “or Madam, truly your forgiveness I implore;
-    But the fact is I was napping, and so gently you came rapping,
-    And so faintly you came tapping, tapping at my chamber door,
-That I scarce was sure I heard you”—here I opened wide the door;—
-            Darkness there and nothing more.
-
-		</div>
-
-		<h6>
-			<p><a name="top"></a></p>
-	<div>	<!-- тег p выравнивает всё в одну строчку-->
-		<img src="C:\Users\Lyra Hearthstrings\Desktop\Lyra Heartstrings\Media\Pictures\Fallout\KCoXESNgT8A.jpg" alt="IMAGE WILL LOAD \n REAMAINING TIME 56 YEARS" height ="400px">
-		<br> <!--тег переноса строки, не парный-->
-		<img src="C:\Users\Lyra Hearthstrings\Desktop\Lyra Heartstrings\Media\Pictures\Furry\fm9s6pN8iC8.jpg" alt=NO IMAGE width="500px"> <!-- атрибуты width, height задают размер или в пикселях-->
-		<br>
-		<p font-size:70px> SOME TEXT-1
-			<img src="https://sun9-8.userapi.com/impg/EuxjFaxEZCX6LBWXV-o7huX-f8sPKbxHNGSryQ/LAZV3l2fa-s.jpg?size=1200x825&quality=96&sign=987916f0f5d407cee6ca1466985b0d5f&type=album" alt="NO IMAGE" width="80%"> SOME TEXT-2
-		</p>
-		<br>
-		<a href="https://www.nexusmods.com/">ССылка на нормальный сайт-оригинал</a>
-	</div>
-	<div>
-		<table bgcolor="green", align="center", border="40px", rules="rows", width="300px">
-			<caption> Заголовок таблицы есть</caption>
+		<table class="secondary_field">
 			<tr>
-				<th height="50x">Cell 1</th> <th height="20px">Cell 2</th> <th>Cell 3</th> <!-- выравнивание идёт по первойиз высот-->
-			</tr>
-			<tr>
-				<th height="10px", rowspan="2">Cell 5</th> <td>Cell 6</td> <td>Cell 7</td> <th>Cell 8</th>
-			</tr>
-			<tr>
-				<th width="100px">Cell 9</th> <th>Cell 10</th> 
+				<th class="item_card">
+					<img src="im5.png" width="80%">
+					<p>Monster </p>
+				</th>
+				<th class="item_card">
+					<img src="im6.png" width="80%">
+					<p>Monster </p>
+				</th>
+				<th class="item_card">
+					<img src="im7.png" width="80%">
+					<p>Monster </p>
+				</th>
+				<th class="item_card">
+					<img src="im8.png" width="80%">
+					<p>Monster </p>
+				</th>
 			</tr>
 		</table>
-		<table cols="4", bgcolor="blue", align="right", rules="all", border="5px", width="400px">
-			<tr>
-				<th>Cell 1</th> <th>Cell 2</th> <th>Cell 3</th>
-			</tr>
-			<tr>
-				<td>Cell 5</td> <td>Cell 6</td> <td>Cell 7</td> <td>Cell 8</td>
-			</tr>
-			<tr>
-				<th>Cell 9</th> <th>Cell 10</th> 
-			</tr>
-		</table>
-		<table bgcolor="#c0c0c0", rules="all", cols="3">
-			<tr>
-				<table cols="2", bgcolor="#c0c0c0", rules="cols", border="20%">
-					<tr><th>LOL</th><th>LOL</th>
-					</tr><tr><th>LOL</th><th>LOL</th></tr>
-				</table>
-				<table cols="2", bgcolor="#c10c5c15", rules="all", border="40%">
-					<tr><th>ONE</th><th>TWO</th></tr>
-					<tr><th>THREE</th><th>FOUR</th></tr>
-				</table>
-			</tr>
-			<tr><th>TEXT</th><th> TWO TEXT</th></tr>
-		</table>
 	</div>
-	<p><a href="#top">Наверх</a></p>
-
-	<div>
-			<ul>
-		<li>text</li>
-		<li>text</li>
-		<li>text</li>
-		<li>LOL</li> 
-		<li>LOL</li>LOL
-		<li>LOL</li>LOL
-		<li>List
-			<ol>
-				<li>el1</li>
-				<li>el2</li>
-			</ol>
-		</li>
-	</ul>
-	</div>
-
-
-
-
-
-		</h6>
-
-
-
-
-	</div>
-
-	
-
-
-
 </body>
 </html>
 
